Fri 27 Nov 09:01pm backup

--- a/portage/etc/repos.conf/layman.conf
+++ b/portage/etc/repos.conf/layman.conf
@@ -40,3 +40,9 @@ location = /var/lib/layman/haskell
 layman-type = git
 auto-sync = No
 
+[rust]
+priority = 50
+location = /var/lib/layman/rust
+layman-type = git
+auto-sync = No
+
