Fri 04 Dec 10:43pm backup

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -137,17 +137,10 @@ type = internal/date
 date = %I:%M%P 
 
 
-[module/title-xmonad]
-type = custom/script
-exec = tail -F /tmp/.xmonad-title-log
-exec-if = [ -p /tmp/.xmonad-title-log ]
-tail = true
-
-
 [module/workspaces-xmonad]
 type = custom/script
 exec = tail -F /tmp/.xmonad-workspace-log
-exec-if = [ -p /tmp/.xmonad-workspace-log ]
+; exec-if = [ -p /tmp/.xmonad-workspace-log ]
 tail = true
 format-offset = 10
 
