Tue 08 Dec 06:09pm backup

--- a/portage/etc/make.conf
+++ b/portage/etc/make.conf
@@ -18,8 +18,8 @@ VIDEO_CARDS="nvidia"
 # This sets the language of build output to English.
 # Please keep this setting intact when reporting bugs.
 LC_MESSAGES=C
-USE="xinerama lm-sensors zsh-completion dbus bluetooth -kde -qt -systemd -gpm -gtk -gnome -consolekit elogind X alsa pulseaudio cdinstall -wayland  \
-     -sysvinit -abi_x86_32 vulkan nvidia ruby_targets_ruby27 -ios  -h"
+USE="xinerama lm-sensors zsh-completion dbus bluetooth -kde -qt -systemd -gpm gtk -gnome -consolekit elogind X alsa pulseaudio cdinstall -wayland  \
+     -sysvinit -abi_x86_32 vulkan nvidia ruby_targets_ruby27 -ios  -h -qt5"
 GENTOO_MIRRORS="ftp://ftp.swin.edu.au/gentoo http://ftp.swin.edu.au/gentoo"
 #source /var/lib/layman/make.conf
 ACCEPT_KEYWORDS="~amd64"
