--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -13,7 +13,7 @@ detect-transient = true;
 detect-client-leader = true;
 
 #Shadow
-shadow = false;
+shadow = true;
 shadow-radius = 30
 shadow-offset-x = -30
 shadow-offset-y = -30
@@ -26,3 +26,39 @@ fading = false
 fade-in-step = 0.1;
 fade-out-step = 0.1;
 no-fading-destroyed-argb = true
+
+
+
+# Corners
+corner-radius = 10.0;
+rounded-corners-exclude = [
+  #"window_type = 'normal'",
+  "class_g = 'awesome'",
+  "class_g = 'URxvt'",
+  "class_g = 'XTerm'",
+  "class_g = 'kitty'",
+  "class_g = 'Alacritty'",
+  "class_g = 'Polybar'",
+  "class_g = 'code-oss'",
+  "class_g = 'firefox'",
+  "class_g = 'Thunderbird'"
+];
+round-borders = 1;
+round-borders-exclude = [
+  #"class_g = 'TelegramDesktop'",
+];
+
+# shadow-exclude
+
+shadow-exclude = [
+  "name = 'Notification'",
+  "class_g = 'Conky'",
+  "class_g ?= 'Notify-osd'",
+  "class_g = 'Cairo-clock'",
+  "class_g = 'slop'",
+  "class_g = 'Polybar'",
+  "class_g = 'rofi'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
+
+
