Tue 15 Dec 02:32pm backup

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -32,7 +32,7 @@ no-fading-destroyed-argb = true
 # Corners
 corner-radius = 10.0;
 rounded-corners-exclude = [
-  #"window_type = 'normal'",
+  "window_type = 'normal'",
   "class_g = 'awesome'",
   "class_g = 'URxvt'",
   "class_g = 'XTerm'",
@@ -41,12 +41,11 @@ rounded-corners-exclude = [
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
   "class_g = 'firefox'",
-  "class_g = 'Thunderbird'"
+  "class_g = 'Thunderbird'",
+  "class_g = 'XMonad'"
 ];
 round-borders = 1;
-round-borders-exclude = [
-  #"class_g = 'TelegramDesktop'",
-];
+
 
 # shadow-exclude
 
@@ -58,6 +57,7 @@ shadow-exclude = [
   "class_g = 'slop'",
   "class_g = 'Polybar'",
   "class_g = 'rofi'",
+  "class_g = 'XMonad'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
