--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -2,17 +2,14 @@
 margin-top = 5
 margin-bottom = 5
 [bar/mybar]
-modules-right =   playing-song pulseaudio cpu memory date
+modules-right =   playing-song pulseaudio cpu memory battery date
 modules-center = time
 modules-left = workspaces-xmonad 
 font-0 = "Inconsolata Nerd Font:style=Regular:size=10"
-font-1 = "Inconsolata Nerd Font:style=Regular:pixelsize=15"
-
+font-1 = "Inconsolata Nerd Font:style=Bold:pixelsize=15"
 enable-ipc = true
 background = #FF838A
-tray-background = #ffd1dc
 radius = 5.0
-monitor = HDMI-0
 tray-position = right
 tray-detatched = false
 border-top-size = 10
@@ -21,7 +18,7 @@ border-left-size = 10
 border-right-size = 10
 line-size = 3
 height = 25
-
+module-margin = 1
 
 [bar/secbar]
 modules-right =  pulseaudio memory 
@@ -72,13 +69,7 @@ type = internal/memory
 ; Default: 1
 interval = 3
 label =  %gb_used%/%gb_total%
-format-prefix-foreground = #8ba9ff
-format-foreground = #696969
-
-format-prefix-background = #51edd5
-format-prefix = " %{T2}%{T-}"
-format-suffix = " "
-format-background = #8ba9ff
+format-foreground = #69C9FF
 
 [module/cpu]
 type = internal/cpu
@@ -107,13 +98,7 @@ ramp-load-4 = ▅
 ramp-load-5 = ▆
 ramp-load-6 = ▇
 ramp-load-7 = █
-format-ramp-load-background = #51edd5
-format-prefix-foreground = #51edd5
-format-foreground = #696969
-
-format-prefix-background = #9ecbdb
-format-prefix = " %{T2}%{T-}"
-format-background = #51edd5
+format-foreground = #51edd5
 
 [colors]
 black = #000
@@ -124,12 +109,7 @@ green = #0f0
 [module/date]
 type = internal/date
 date =  %a %d %b
-format-prefix-foreground = #ffd1dc
-format-foreground = #696969
-format-prefix-background = #8ba9ff
-format-font = 3
-format-prefix = " %{T2}%{T-}"
-format-background = #ffd1dc
+format-foreground = #ffd1dc
 
 
 [module/time]
@@ -148,21 +128,79 @@ format-offset = 10
 type = custom/script
 exec = ~/.xmonad/currentPlay.py
 tail = true
-format-prefix-foreground = #dbd89e
-format-prefix-background = #FF838A
-format-prefix = " %{T2}%{T-}"
-format-background = #dbd89e
+format-foreground = #806768
 
+[module/battery]
+type = internal/battery
+
+full-at = 99
+
+battery = BAT0
+adapter = AC
+
+poll-interval = 5
+; see "man date" for details on how to format the time string
+; NOTE: if you want to use syntax tags here you need to use %%{...}
+; Default: %H:%M:%S
+time-format = %H:%M
+
+; Available tags:
+;   <label-charging> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+;   <animation-charging>
+format-charging = <animation-charging> 
+
+; Available tags:
+;   <label-discharging> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+;   <animation-discharging>
+format-discharging = <ramp-capacity> 
+; Available tags:
+;   <label-full> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+format-full = <ramp-capacity> 
+
+
+; Available tokens:
+;   %percentage% (default) - is set to 100 if full-at is reached
+;   %percentage_raw%
+label-full = Fully charged
+
+; Only applies if <ramp-capacity> is used
+ramp-capacity-0 = "%{F#FF6970}  %{F--}"
+ramp-capacity-1 = "%{F#FFAE8F}  %{F--}"
+ramp-capacity-2 = " "
+ramp-capacity-3 = "%{F#82FFA2}  %{F--}"
+ramp-capacity-4 = " "
+
+; Only applies if <bar-capacity> is used
+bar-capacity-width = 10
+
+; Only applies if <animation-charging> is used
+animation-charging-0 = "   "
+animation-charging-1 = "   "
+animation-charging-2 = "   "
+animation-charging-3 = "   "
+animation-charging-4 = "   "
+; Framerate in milliseconds
+animation-charging-framerate = 750
+
+; Only applies if <animation-discharging> is used
+animation-discharging-0 = "   "
+animation-discharging-1 = "   "
+animation-discharging-2 = "   "
+animation-discharging-3 = "   "
+animation-discharging-4 = "   "
+; Framerate in milliseconds
+animation-discharging-framerate = 500
 [module/pulseaudio]
 type = internal/pulseaudio
 
 
-
-format-volume-prefix-foreground = #9ecbdb
-format-volume-prefix-background = #dbd89e
-format-volume-prefix = " %{T2}%{T-}"
-format-volume-suffix = " "
-format-volume-background = #9ecbdb
+format-volume-foreground = #9ecbdb
 ; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
 ; If not, uses default sink
 sink = alsa_output.usb-RODE_Microphones_RODE_AI-1_7493DF5C-00.iec958-stereo
@@ -197,7 +235,7 @@ format-volume = <ramp-volume> <label-volume>
 ;   %percentage% (default)
 ;   %decibels% (unreleased)
 label-muted = ﱝ muted
-label-muted-foreground = #666
+label-muted-foreground = #9ecbdb
 
 ; Only applies if <ramp-volume> is used
 ramp-volume-0 = 奄
