--- a/.config/alacritty.yml
+++ b/.config/alacritty.yml
@@ -33,9 +33,9 @@ colors:
     white:   '0xc5c8c6'
 
 font:
-  size: 12
+  size: 10
 
   normal:
-    family: Inconsolata Nerd Font
+    family: Hasklug Nerd Font
 
     style: Regular
