--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -32,18 +32,8 @@ no-fading-destroyed-argb = true
 # Corners
 corner-radius = 10.0;
 rounded-corners-exclude = [
-  "window_type = 'normal'",
-  "class_g = 'awesome'",
-  "class_g = 'URxvt'",
-  "class_g = 'XTerm'",
-  "class_g = 'kitty'",
-  "class_g = 'Alacritty'",
-  "class_g = 'Polybar'",
-  "class_g = 'code-oss'",
-  "class_g = 'firefox'",
-  "class_g = 'Thunderbird'",
-  "class_g = 'XMonad'"
-];
+    "class_g = 'Polybar'"
+]
 round-borders = 1;
 
 
