Wed 30 Dec 12:08am backup

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -3,11 +3,13 @@ margin-top = 5
 margin-bottom = 5
 [bar/mybar]
 monitor = HDMI-0
-modules-right =   playing-song pulseaudio cpu temp memory date
+modules-right =   playing-song pulseaudio cpu temp memory date poweroff
 modules-center = time
 modules-left = workspaces-xmonad 
-font-0 = "RobotoMono Nerd Font:style=Medium:size=10"
+
+font-0 = "RobotoMono Nerd Font:style=Medium:size=10;2"
 font-1 = "RobotoMono Nerd Font:style=Bold:pixelsize=15"
+font-2 = "RobotoMono Nerd Font:style=Medium:size=15;-10"
 enable-ipc = true
 foreground = #FFDB9E
 background = #9591FF
@@ -23,34 +25,6 @@ height = 25
 module-margin = 1
 
 
-
-
-[bar/rightbar]
-font-0 = "Inconsolata Nerd Font:style=Regular:size=10"
-font-1 = "Inconsolata Nerd Font:style=Bold:pixelsize=15"
-
-modules-right = playing-song pulseaudio cpu memory date
-width = 30%
-offset-x = 70%
-[bar/midbar]
-offset-x = 35%
-width = 30%
-fixed-center = true
-modules-center = time
-
-
-[bar/leftbar]
-width = 30%
-modules-left = workspaces-xmonad
-font-0 = "Inconsolata Nerd Font:style=Regular:size=10"
-font-1 = "Inconsolata Nerd Font:style=Bold:pixelsize=15"
-background = #FF838A
-border-top-size = 10
-border-bottom-size = 5
-border-left-size = 10
-border-right-size = 10
-radius = 5.0
-
 [module/temp]
 type = internal/temperature
 interval = 0.5
@@ -65,33 +39,31 @@ ramp-2 = 
 
 [module/cpu2]
 type = internal/cpu
-format-margin = 5
 interval = 0.5
 ; Available tags:
 ;   <label> (default)
 ;   <bar-load>
 ;   <ramp-load>
 ;   <ramp-coreload>
-format =    <ramp-coreload>
+format = <label> <bar-load>
 
 ; Available tokens:
 ;   %percentage% (default) - total cpu load averaged over all cores
 ;   %percentage-sum% - Cumulative load on all cores
-;   %percentage-cores% - load percentage for each core
-;   %percentage-core[1-9]% - load percentage for specific core
+label = CPU %percentage%%
+bar-load-format = %fill%%indicator%%empty%
+bar-load-width = 10
 
-; Spacing between individual per-core ramps
-ramp-coreload-spacing = 1
-ramp-coreload-0 = " ▁"
-ramp-coreload-1 = ▂
-ramp-coreload-2 = ▃
-ramp-coreload-3 = ▄
-ramp-coreload-4 = ▅
-ramp-coreload-5 = ▆
-ramp-coreload-6 = ▇
-ramp-coreload-7 = █
+bar-load-gradient = true
+bar-load-foreground-0 = #00ff00
+bar-load-foreground-1 = #ff9900
+bar-load-foreground-2 = #ff0000
 
-
+; The fill, indicator and empty icon can be configured like any <label>
+bar-load-fill = ﱢ
+bar-load-indicator = ﱢ
+bar-load-indicator-font = 2
+bar-load-empty = -
 
 [module/memory]
 type = internal/memory
@@ -157,7 +129,7 @@ format-offset = 10
 
 [module/playing-song]
 type = custom/script
-exec = ~/.xmonad/currentPlay.py
+exec = ~/.config/polybar/scripts/currentPlay.py
 tail = true
 format-foreground = #806768
 [module/battery]
@@ -225,60 +197,40 @@ animation-discharging-2 = "   "
 animation-discharging-3 = "   "
 animation-discharging-4 = "   "
 ; Framerate in milliseconds
+
+
 animation-discharging-framerate = 500
 [module/pulseaudio]
 type = internal/pulseaudio
-
-
 format-volume-foreground = #9ecbdb
-; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
-; If not, uses default sink
 sink = alsa_output.usb-RODE_Microphones_RODE_AI-1_7493DF5C-00.iec958-stereo
-
-; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
-; Default: true
 use-ui-max = true
 label-active-font = 1
-; Interval for volume increase/decrease (in percent points)
-; Default: 5
 interval = 5
 
 
-; Available tags:
-;   <label-volume> (default)
-;   <ramp-volume>
-;   <bar-volume>
 format-volume = <ramp-volume> <label-volume>
-
-; Available tags:
-;   <label-muted> (default)
-;   <ramp-volume>
-;   <bar-volume>
-;format-muted = <label-muted>
-
-; Available tokens:
-;   %percentage% (default)
-;   %decibels% (unreleased)
-;label-volume = %percentage%%
-
-; Available tokens:
-;   %percentage% (default)
-;   %decibels% (unreleased)
 label-muted = ﱝ muted
 label-muted-foreground = #9ecbdb
-
-; Only applies if <ramp-volume> is used
 ramp-volume-0 = 奄
 ramp-volume-1 = 墳
 ramp-volume-2 = 墳
-
-; Right and Middle click (unreleased)
-click-right = pavucontrol &
-; click-middle = 
-
-
+click-right = nix-shell -p pavucontrol --command "pavucontrol" &
 
 
 [module/poweroff]
-type = custom/script
-exec = poweroff
+type = custom/menu
+expand-right = true
+menu-0-0 = 襤
+menu-0-0-exec = poweroff
+menu-0-1 = ﰇ
+menu-0-1-exec = reboot
+
+
+label-open = " "
+label-open-foreground = #FFA500
+label-close = 
+
+; Optional item separator
+label-separator = " "
+
