Tue 26 Jan 10:37pm backup

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -129,9 +129,10 @@ format-offset = 10
 
 [module/playing-song]
 type = custom/script
-exec = ~/.config/polybar/scripts/currentPlay.py
+exec = ~/.config/polybar/scripts/bar
 tail = true
 format-foreground = #806768
+
 [module/battery]
 type = internal/battery
 
