--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,17 +1,16 @@
 
 format = """
-[┌───────────────────>](bold green)
-[│](bold green) $directory$custom $username$rust$package$cmd_duration$git_status$nix_shell$haskell
-$character"""
+$status$directory$rust$package$cmd_duration$git_status$nix_shell$haskell$purescript$character
+"""
 
 [custom.shell]
 command = "echo $STARSHIP_SHELL"
 when = "true"
 format  = "[$output](bold blue)"
 
-[character]                            # The name of the module we are configuring is "character"
-success_symbol = "[└─➜ ](bold green)"
-error_symbol = "[└─➜ ](bold red)"
+#success_symbol = "[➜ ](bold green)"
+#error_symbol = "[➜ ](bold red)"
+
 
 
 [username]
@@ -80,6 +79,9 @@ symbol = " "
 
 [nix_shell]
 symbol = " "
+impure_msg = "[impure shell](bold red)"
+pure_msg = "[pure shell](bold green)"
+format = 'via [☃️ $state( \($name\))](bold blue) '
 
 [nodejs]
 symbol = " "
