Thu 28 Jan 11:07pm backup

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,6 +1,6 @@
 [global/wm]
-margin-top = 5
-margin-bottom = 5
+;margin-top = 5
+margin-bottom = 2
 [bar/mybar]
 monitor = HDMI-0
 modules-right =   playing-song pulseaudio cpu temp memory date poweroff
@@ -13,13 +13,13 @@ font-2 = "RobotoMono Nerd Font:style=Medium:size=15;-10"
 enable-ipc = true
 foreground = #FFDB9E
 background = #9591FF
-radius = 7
+;radius = 7
 tray-position = right
 tray-detatched = false
-border-top-size = 10
-border-bottom-size = 5
-border-left-size = 10
-border-right-size = 10
+;border-top-size = 10
+;border-bottom-size = 5
+;border-left-size = 10
+;border-right-size = 10
 line-size = 3
 height = 25
 module-margin = 1
