Mon 01 Feb 10:26pm backup

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -5,7 +5,7 @@ margin-bottom = 2
 monitor = HDMI-0
 modules-right =   playing-song pulseaudio cpu temp memory date poweroff
 modules-center = time
-modules-left = workspaces-xmonad 
+modules-left =  workspaces-xmonad 
 
 font-0 = "RobotoMono Nerd Font:style=Medium:size=10;2"
 font-1 = "RobotoMono Nerd Font:style=Bold:pixelsize=15"
@@ -24,6 +24,40 @@ line-size = 3
 height = 25
 module-margin = 1
 
+[module/workspaces]
+type = internal/xworkspaces
+format = <label-state>
+pin-workspaces = false
+enable-click = true
+enable-scroll = false
+reverse-scroll = false
+
+label-active = ${env:focus_base06}
+label-active-background = ${c.basebg}
+label-active-foreground = ${c.base06}
+label-active-padding = 1
+label-active-font = 1
+
+label-occupied = ${env:active_base04}
+label-occupied-background = ${c.basebg}
+label-occupied-foreground = ${c.base04}
+label-occupied-padding = 1
+label-occupied-font = 1
+
+label-urgent = ${env:urgent_base03}
+label-urgent-background = ${c.basebg}
+label-urgent-foreground = ${c.basefg}
+label-urgent-padding = 1
+label-urgent-font = 1
+
+label-empty = ${env:urgent_base03}
+label-empty-background = ${c.basebg}
+label-empty-foreground = ${c.basefg}
+label-empty-padding = 0
+label-empty-font = 0
+
+format-foreground = ${c.basefg}
+format-background = ${c.basebg}
 
 [module/temp]
 type = internal/temperature
