Sun 21 Feb 03:24pm backup

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -255,7 +255,7 @@ animation-discharging-framerate = 500
 [module/pulseaudio]
 type = internal/pulseaudio
 format-volume-foreground = #9ecbdb
-sink = alsa_output.usb-RODE_Microphones_RODE_AI-1_7493DF5C-00.iec958-stereo
+sink = @DEFAULT_SINK@
 use-ui-max = true
 label-active-font = 1
 interval = 5
@@ -274,7 +274,7 @@ type = custom/menu
 expand-right = true
 menu-0-0 = 襤
 menu-0-0-exec = poweroff
-menu-0-1 =   ﰇ
+menu-0-1 = ﰇ
 menu-0-1-exec = reboot
 
 
