--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,9 +1,25 @@
 [global/wm]
 ;margin-top = 5
 margin-bottom = 2
+
+[bar/secbar]
+monitor = DP-5
+
+module-center = time
+
+font-0 = "RobotoMono Nerd Font:style=Medium:size=10;2"
+font-1 = "RobotoMono Nerd Font:style=Bold:pixelsize=15"
+font-2 = "RobotoMono Nerd Font:style=Medium:size=15;-10"
+
+enable-ipc = true
+foreground = ${colors.pink}
+background =  ${colors.black}
+module-margin = 1
+height = 25
+
 [bar/mybar]
 monitor = HDMI-0
-modules-right =   playing-song pulseaudio  date 
+modules-right =   playing-song pulseaudio date 
 modules-center = time
 modules-left = workspaces-xmonad
 
@@ -12,7 +28,7 @@ font-1 = "RobotoMono Nerd Font:style=Bold:pixelsize=15"
 font-2 = "RobotoMono Nerd Font:style=Medium:size=15;-10"
 enable-ipc = true
 foreground = ${colors.pink}
-background = ${colors.black}
+background =  ${colors.black}
 ;radius = 7
 tray-position = right
 tray-detatched = false
@@ -23,6 +39,12 @@ tray-detatched = false
 line-size = 3
 height = 25
 module-margin = 1
+
+[module/packages]
+type = custom/script
+format-foreground = #A04668
+exec = echo " $(yay -Qu | wc -l)"
+poll-interval = 10000
 
 [module/xwindow]
 type = internal/xwindow
@@ -182,7 +204,7 @@ type = custom/script
 exec = ~/.config/polybar/scripts/bar
 click-middle = ~/.config/polybar/scripts/eww.sh player_bar
 tail = true
-format-foreground = #806768
+format-foreground = #707078
 
 [module/battery]
 type = internal/battery
@@ -254,7 +276,7 @@ animation-discharging-4 = "   "
 animation-discharging-framerate = 500
 [module/pulseaudio]
 type = internal/pulseaudio
-format-volume-foreground = #9ecbdb
+format-volume-foreground = #8BB2C1
 sink = @DEFAULT_SINK@
 use-ui-max = true
 label-active-font = 1
