--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,11 +1,11 @@
 backend = "glx";
-vsync = true;
+# vsync = true;
 refresh_rate = 60;
 use-damage = true;
 
 xrender-sync-fence = true;
-glx-no-stencil = true;
-glx-no-rebind-pixmap = true;
+# glx-no-stencil = true;
+# glx-no-rebind-pixmap = true;
 
 use-ewmh-active-win = true;
 unredir-if-possible = true;
@@ -14,30 +14,74 @@ detect-client-leader = true;
 
 #Shadow
 shadow = true;
-shadow-radius = 30
-shadow-offset-x = -30
-shadow-offset-y = -30
-shadow-opacity = 0.5
-xinerama-shadow-crop = true
-shadow-exculde = ["name = 'dwm'"]
+shadow-radius = 30;
+shadow-offset-x = -30;
+shadow-offset-y = -30;
+shadow-opacity = 0.5;
+xinerama-shadow-crop = true;
 
 # Fade
-fading = false
+fading = false;
 fade-in-step = 0.1;
 fade-out-step = 0.1;
 no-fading-destroyed-argb = true
 
+#################################
+#     Background-Blurring       #
+#################################
 
+
+# Parameters for background blurring, see the *BLUR* section for more information.
+# blur-method =
+# blur-size = 12
+#
+# blur-deviation = false
+#
+# blur-strength = 5
+
+# Blur background of semi-transparent / ARGB windows.
+# Bad in performance, with driver-dependent behavior.
+# The name of the switch may change without prior notifications.
+#
+ blur-background = true
+
+# Blur background of windows when the window frame is not opaque.
+# Implies:
+#    blur-background
+# Bad in performance, with driver-dependent behavior. The name may change.
+#
+# blur-background-frame = false
+
+
+# Use fixed blur strength rather than adjusting according to window opacity.
+# blur-background-fixed = false
+
+
+# Specify the blur convolution kernel, with the following format:
+# example:
+#   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+#
+# blur-kern = ""
+blur-kern = "3x3box";
+
+
+# Exclude conditions for background blur.
+# blur-background-exclude = []
+blur-background-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'",
+  "_GTK_FRAME_EXTENTS@:c",
+  "class_g = 'slop'"
+];
 
 # Corners
 corner-radius = 10.0;
 rounded-corners-exclude = [
     "class_g = 'Polybar'"
 ]
-round-borders = 1;
+round-borders=1;
 
 
-# shadow-exclude
 
 shadow-exclude = [
   "name = 'Notification'",
