--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,4 +1,3 @@
-
 format = """
 $status$directory$rust$package$cmd_duration$git_status$nix_shell$haskell$purescript$python$character
 """
@@ -8,8 +7,9 @@ command = "echo $STARSHIP_SHELL"
 when = "true"
 format  = "[$output](bold blue)"
 
-#success_symbol = "[➜ ](bold green)"
-#error_symbol = "[➜ ](bold red)"
+[character]
+success_symbol = "[❯](bold light blue)"
+error_symbol = "[❯](bold white)"
 
 
 
