--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,7 +17,7 @@ background =  ${colors.black}
 module-margin = 1
 height = 25
 
-[bar/mybar]
+[bar/desktopbar]
 monitor = HDMI-0
 modules-right =   playing-song pulseaudio date 
 modules-center = time
@@ -39,6 +39,30 @@ tray-detatched = false
 line-size = 3
 height = 25
 module-margin = 1
+
+[bar/laptopbar]
+modules-right =   playing-song pulseaudio battery date
+modules-center = time
+modules-left = workspaces-xmonad
+
+font-0 = "RobotoMono Nerd Font:style=Medium:size=10;2"
+font-1 = "RobotoMono Nerd Font:style=Bold:pixelsize=15"
+font-2 = "RobotoMono Nerd Font:style=Medium:size=15;-10"
+enable-ipc = true
+foreground = ${colors.pink}
+background =  ${colors.black}
+;radius = 7
+tray-position = right
+tray-detatched = false
+;border-top-size = 10
+;border-bottom-size = 5
+;border-left-size = 10
+;border-right-size = 10
+line-size = 3
+height = 25
+module-margin = 1
+
+
 
 [module/packages]
 type = custom/script
