fixup! fixup! Merge branch 'master' of github.com:AusCyberman/dotfiles

--- a/.links.toml
+++ b/.links.toml
@@ -74,5 +74,5 @@ destination = ["laptop", ".config/polybar/launch_laptop.sh"]
 
 [[links]]
 name = "xmonad/build"
-src = "/home/auscyber/.xmonad/build"
+src = "$HOME/.xmonad/build"
 destination = "xmonad/build"
