--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,5 +1,5 @@
 backend = "glx";
-# vsync = true;
+vsync = true;
 refresh_rate = 60;
 use-damage = true;
 
@@ -79,7 +79,8 @@ corner-radius = 10.0;
 rounded-corners-exclude = [
     "class_g = 'Polybar'"
 ]
-round-borders=1;
+
+round-borders = 1;
 
 
 
@@ -94,5 +95,3 @@ shadow-exclude = [
   "class_g = 'XMonad'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
-
-
