--- a/xmonad/my-xmonad.cabal
+++ b/xmonad/my-xmonad.cabal
@@ -18,3 +18,8 @@ executable my-xmonad
   hs-source-dirs:      lib
   default-language:    Haskell2010
 --  ghc-options:         -Wall -Werror -fno-warn-missing-signatures -threaded
+executable bar
+  main-is:  bar.hs
+  hs-source-dirs: lib
+  other-modules: Polybar
+  build-depends: base, X11, dbus, xmonad, xmonad-contrib, containers, process
