changed to fennel

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -71,11 +71,12 @@ blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c",
-  "class_g = 'slop'"
+  "class_g = 'slop'",
+  "class_g = 'Firefox'"
 ];
 
 # Corners
-corner-radius = 10.0;
+corner-radius = 5.0;
 rounded-corners-exclude = [
     "class_g = 'Polybar'"
 ]
@@ -93,5 +94,6 @@ shadow-exclude = [
   "class_g = 'Polybar'",
   "class_g = 'rofi'",
   "class_g = 'XMonad'",
+  "class_g = 'Firefox'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
