--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -9,7 +9,7 @@ module-center = time
 
 font-0 = "RobotoMono Nerd Font:style=Medium:size=10;2"
 font-1 = "RobotoMono Nerd Font:style=Bold:pixelsize=15"
-font-2 = "RobotoMono Nerd Font:style=Medium:size=15;-10"
+font-2 = "RobotoMono Nerd Font:style=Medium:size=13"
 
 enable-ipc = true
 foreground = ${colors.pink}
@@ -225,7 +225,7 @@ format-offset = 10
 
 [module/playing-song]
 type = custom/script
-exec = ~/.config/polybar/scripts/bar
+exec = bar
 click-middle = ~/.config/polybar/scripts/eww.sh player_bar
 tail = true
 format-foreground = #707078
