Done some stuff

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -78,7 +78,9 @@ blur-background-exclude = [
 # Corners
 corner-radius = 5.0;
 rounded-corners-exclude = [
-    "class_g = 'Polybar'"
+    "class_g = 'Polybar'",
+    "class_g = 'rofi'",
+    "class_g = 'Rofi'"
 ]
 
 round-borders = 1;
