--- a/.links.toml
+++ b/.links.toml
@@ -41,7 +41,8 @@ src = "xmonad/my-xmonad.cabal"
 [[links]]
 name = "xmonad/stack.yaml"
 destination = "$HOME/.xmonad/stack.yaml"
-src = ["desktop", "xmonad/stack.yaml"]
+system = "desktop"
+src = "xmonad/stack.yaml"
 
 [[links]]
 name = "xmonad/lib"
@@ -51,7 +52,8 @@ src = "xmonad/lib"
 [[links]]
 name = "xmonad"
 destination = "$HOME/.xmonad/xmonad.hs"
-src = ["desktop", "xmonad/lib/xmonad.hs"]
+system = "desktop"
+src = "xmonad/lib/xmonad.hs"
 
 [[links]]
 name = ".config/polybar/config.ini"
@@ -61,9 +63,9 @@ src = ".config/polybar/config.ini"
 [[links]]
 name = ".config/polybar/launch_desktop.sh"
 destination = "$HOME/.config/polybar/launch.sh"
+default_path = ".config/polybar/launch_desktop.sh"
 
-[links.src]
-desktop = ".config/polybar/launch_desktop.sh"
+[links.source_map]
 laptop = ".config/polybar/launch_laptop.sh"
 
 [[links]]
@@ -74,9 +76,9 @@ src = ".config/polybar/scripts"
 [[links]]
 name = "xmonad/build"
 destination = "$HOME/.xmonad/build"
+default_path = "xmonad/build_laptop"
 
-[links.src]
-laptop = "xmonad/build_laptop"
+[links.source_map]
 desktop = "xmonad/build_desktop"
 
 [[links]]
@@ -92,9 +94,9 @@ src = ".config/fontconfig"
 [[links]]
 name = "xmonad/my-xmonad_laptop.cabal"
 destination = "$HOME/.xmonad/my-xmonad.cabal"
+default_path = "xmonad/my-xmonad.cabal"
 
-[links.src]
-desktop = "xmonad/my-xmonad.cabal"
+[links.source_map]
 laptop = "xmonad/my-xmonad_laptop.cabal"
 
 [[links]]
@@ -131,3 +133,18 @@ src = "phoebelyrics"
 name = ".config/rofi_themed"
 destination = "/home/auscyber/.config/rofi"
 src = ".config/rofi_themed"
+
+[[links]]
+name = "nix-vscode"
+destination = "/home/auscyber/nix-vscode"
+src = "nix-vscode"
+
+[[links]]
+name = "setIcon.sh"
+destination = "/home/auscyber/setIcon.sh"
+src = "setIcon.sh"
+
+[[links]]
+name = "wezterm"
+destination = "/home/auscyber/.config/wezterm"
+src = ".config/wezterm"
