--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -27,17 +27,17 @@ font-0 = "RobotoMono Nerd Font:style=Medium:size=10;2"
 font-1 = "RobotoMono Nerd Font:style=Bold:pixelsize=15"
 font-2 = "RobotoMono Nerd Font:style=Medium:size=15;-10"
 enable-ipc = true
-foreground = ${colors.pink}
-background = ${colors.black}
-radius = 7
+foreground = ${colors.black}
+background = ${colors.yellow}
+#radius = 7
 tray-position = right
 tray-detatched = false
-border-top-size = 10
-border-bottom-size = 5
-border-left-size = 10
-border-right-size = 10
+#border-top-size = 10
+#border-bottom-size = 5
+#border-left-size = 10
+#border-right-size = 10
 line-size = 3
-height = 25
+height = 30
 module-margin = 1
 
 [bar/laptopbar]
@@ -208,13 +208,13 @@ purple = #9591FF
 [module/date]
 type = internal/date
 date =  %a %d %b
-format-foreground = #ffd1dc
+format-foreground = ${colors.purple}
 
 
 [module/time]
 type = internal/date
 date = %I:%M%P 
-format-foreground = ${colors.white}
+format-foreground = ${colors.black}
 
 [module/workspaces-xmonad]
 type = custom/script
@@ -319,7 +319,7 @@ click-right = nix-shell -p pavucontrol --command "pavucontrol" &
 type = custom/text
 content = "襤 "
 
-content-background = ${colors.black}
+#content-background = ${colors.black}
 content-foreground = ${colors.pink}
 
 click-left = ~/.config/rofi/applets/applets/powermenu.sh &
