--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -18,7 +18,7 @@ module-margin = 1
 height = 25
 
 [bar/desktopbar]
-monitor = HDMI-0
+#monitor = HDMI-0
 modules-right =   playing-song pulseaudio date  powermenu
 modules-center = time
 modules-left = workspaces-xmonad
@@ -27,8 +27,8 @@ font-0 = "RobotoMono Nerd Font:style=Medium:size=10;2"
 font-1 = "RobotoMono Nerd Font:style=Bold:pixelsize=15"
 font-2 = "RobotoMono Nerd Font:style=Medium:size=15;-10"
 enable-ipc = true
-foreground = ${colors.black}
-background = ${colors.yellow}
+foreground = ${colors.white}
+background = ${colors.black}
 #radius = 7
 tray-position = right
 tray-detatched = false
@@ -62,7 +62,9 @@ line-size = 3
 height = 25
 module-margin = 1
 
-
+[module/pomodoro]
+type = custom/script
+exec = pomodoro status
 
 [module/packages]
 type = custom/script
@@ -208,13 +210,13 @@ purple = #9591FF
 [module/date]
 type = internal/date
 date =  %a %d %b
-format-foreground = ${colors.purple}
+format-foreground = ${colors.pink}
 
 
 [module/time]
 type = internal/date
 date = %I:%M%P 
-format-foreground = ${colors.black}
+format-foreground = ${colors.white}
 
 [module/workspaces-xmonad]
 type = custom/script
