[polybar] Change stuff

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -20,7 +20,7 @@ height = 25
 
 [bar/desktopbar]
 #monitor = HDMI-0
-modules-right =   playing-song pulseaudio date  powermenu
+modules-right =   playing-song pulseaudio uptime date  powermenu
 modules-center = time
 modules-left = workspaces-xmonad
 
@@ -161,6 +161,12 @@ bar-load-indicator = ﱢ
 bar-load-indicator-font = 2
 bar-load-empty = -
 
+[module/uptime]
+type = custom/script
+exec = uptime -p | sed 's/up//'
+format = " <label>"
+
+
 [module/memory]
 type = internal/memory
 
@@ -200,7 +206,7 @@ ramp-load-7 = █
 format-foreground = #85FFB7
 
 [colors]
-black = #121212
+black = #2A2A2A
 white = #D9D9D9
 blue = #00f
 green = #0f0
@@ -216,7 +222,7 @@ format-foreground = ${colors.pink}
 
 [module/time]
 type = internal/date
-date = %I:%M%P 
+date = %I:%M%P
 format-foreground = ${colors.white}
 
 [module/workspaces-xmonad]
@@ -252,19 +258,19 @@ time-format = %H:%M
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-charging>
-format-charging = <animation-charging> 
+format-charging = <animation-charging>
 
 ; Available tags:
 ;   <label-discharging> (default)
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-discharging>
-format-discharging = <ramp-capacity> 
+format-discharging = <ramp-capacity>
 ; Available tags:
 ;   <label-full> (default)
 ;   <bar-capacity>
 ;   <ramp-capacity>
-format-full = <ramp-capacity> 
+format-full = <ramp-capacity>
 
 
 ; Available tokens:
