--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,15 +17,15 @@ set -g status-interval 0
 set -g mouse on
 
 set-option -g allow-rename off
+set-option -g focus-events on
 
 ## fix colours
 set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",xterm-256-color:Tc"
-
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 ##### COLOURS
 
-#clock 
+#clock
 setw -g clock-mode-colour colour5
 setw -g mode-style 'fg=colour1 bg=colour18 bold'
 
