--- a/.config/picom/picom2.conf
+++ b/.config/picom/picom2.conf
@@ -21,7 +21,7 @@ shadow-opacity = 0.5;
 xinerama-shadow-crop = true;
 
 # Fade
-fading = false;
+fading = true;
 fade-in-step = 0.1;
 fade-out-step = 0.1;
 no-fading-destroyed-argb = true
