--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -20,7 +20,7 @@ height = 25
 
 [bar/desktopbar]
 #monitor = HDMI-0
-modules-right =   playing-song pulseaudio uptime date  powermenu
+modules-right =   playing-song pulseaudio uptime up date  powermenu
 modules-center = time
 modules-left = workspaces-xmonad
 
@@ -66,6 +66,12 @@ module-margin = 1
 [module/pomodoro]
 type = custom/script
 exec = pomodoro status
+
+[module/up]
+type = custom/script
+exec = ~/getup.sh
+format-foreground = #ff7a67
+interval = 30
 
 [module/packages]
 type = custom/script
